# src/routes/api/swagger.yaml
@@ -12,11 +12,14 @@ consumes:
 produces:
   - "application/json"
 paths:
-  "/orders/list":
+  "/orders/list/{date}":
     get:
       summary: Returns a list of orders.
       tags:
         - Orders
+      parameters:
+      - name: date
+        in : path
       responses:
         '200':    # status code
           description: A JSON array of user names
